# Calculator

./: CMakeLists.txt  CalculatorButton.qml  CalculatorEngine.cpp  CalculatorEngine.h  HiddenMenu.qml  Main.qml  MainMenu.qml  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  styles.qss
